# andreypopp.com

./: .flowconfig  .gitignore  Makefile  README.md  atom.ml  babel.config.js  collection.js  content.ml  cosmos.config.js  dune  dune-project  index.js  main.mlx  markdown_content.ml  package.json  request.js
andreypopp.com/: Makefile  Page.js  Post.js  Section.js  Wiki.js  next.config.js  package.json
arrow/: Logo.js  Makefile  Page.js
arrowresearch.net/: Logo.js  Makefile  Page.js  next.config.js  package.json
blog/: 2024-05-04-using-function-arguments-polymorphically-in-ocaml.md
content_lib/: atom.ml  atom.mli  content.ml  dune  markdown_content.ml  markdown_content.mli
pages/: footer.jsx  index.jsx  post.jsx  style.css
posts/: 2010-07-16-generic-multidispatching.md  2010-07-19-generic-release-0.2.md  2010-07-21-python-where-statement.md  2010-07-23-python-property.md  2011-02-03-what-github-projects-im-follow.md  2011-02-13-content-negotiation-with-pyramid.md  2011-02-18-transitive-closure-with-SQL.md  2011-02-23-api-for-accessing-sql-databases.md  2011-04-02-pep8.md  2011-05-01-project-idea-eip-in-erlang-pt-1.md  2011-05-14-flipboard-app.md  2011-05-24-why-do-erlang-need-modules.md  2011-06-08-who-cares-about-zope.md  2011-07-08-learning-python.md  2011-08-06-reading-slides-on-js.md  2011-08-09-scalatypes-podcast.md  2012-02-02-open-source-goodies-for-backbone.md  2012-02-27-music-distributed-economy.md  2012-03-07-music-streaming-oh-my.md  2012-05-20-postgresqls-composite-types.md  2012-05-28-polyplatformic-software-stacks.md  2012-09-01-ensime-for-vim.md  (+23 more)
(+105 files in other folders)
